--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,17 +4,17 @@ steps:
       - cd collector
       - make pakage
       - du -hs build/collector-extension.zip
-    artifact_paths: "build/collector-extension.zip"
+    artifact_paths: "collector/build/collector-extension.zip"
     plugins:
       - docker#v3.9.0:
-          image: "golang:1.18-alpine"
+          image: "golang:1.18-bullseye"
 
   - label: "build wrapper layer"
     commands:
       - cd nodejs
       - npm install
       - du -hs packages/layer/layer.zip
-    artifact_paths: "packages/layer/layer.zip"
+    artifact_paths: "nodejs/packages/layer/layer.zip"
     plugins:
       - docker#v3.9.0:
           image: "node:16"
