Fixing build references

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,8 +2,9 @@ steps:
   - label: "build collector layer"
     commands:
       - cd collector
+      - yum install -y zip
       - make package
-    artifact_paths: "collector/build/collector-extension.zip"
+    artifact_paths: "build/collector-extension.zip"
     plugins:
       - docker#v3.9.0:
           image: "golang:1.18-bullseye"
@@ -12,7 +13,7 @@ steps:
     commands:
       - cd nodejs
       - npm install
-    artifact_paths: "nodejs/packages/layer/layer.zip"
+    artifact_paths: "packages/layer/layer.zip"
     plugins:
       - docker#v3.9.0:
           image: "node:16"
