--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,7 +2,7 @@ steps:
   - label: "build collector layer"
     commands:
       - cd collector
-      - apt install -y zip
+      - apt update; apt install -y zip
       - make package
     artifact_paths: "build/collector-extension.zip"
     plugins:
